--- a/CameraXBasic/app/build.gradle
+++ b/CameraXBasic/app/build.gradle
@@ -74,7 +74,7 @@ dependencies {
 
     // App compat and UI things
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-rc03'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     // Navigation library
@@ -96,7 +96,7 @@ dependencies {
     testImplementation 'androidx.test:rules:1.2.0'
     testImplementation 'androidx.test:runner:1.2.0'
     testImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    testImplementation "org.robolectric:robolectric:4.3"
+    testImplementation "org.robolectric:robolectric:4.3.1"
 
     // Instrumented testing
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
