--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,7 @@ android:
     - build-tools-29.0.0
     - android-29
     - extra
+  licenses:
+    - 'android-sdk-license-.+'
 
 before_install: cd CameraXBasic
